Project includes fix

--- a/GlobalCode/BlazesGlobalCode.vcxproj
+++ b/GlobalCode/BlazesGlobalCode.vcxproj
@@ -219,22 +219,20 @@
     <ClInclude Include="AltNum\MediumDec.hpp" />
     <ClInclude Include="AltNum\MediumDec_OtherMath.hpp" />
     <ClInclude Include="AltNum\MixedDec.hpp" />
-    <ClInclude Include="AltNum\ModCheckerX.hpp" />
-    <ClInclude Include="AltNum\ModCheckerXX.hpp" />
-    <ClInclude Include="Databases\BuiltinFormula.hpp" />
+    <ClInclude Include="AltNum\AltNumModChecker.hpp" />
     <ClInclude Include="Databases\CustomDictionary.h" />
     <ClInclude Include="Databases\CustomOrderedDictionary.h" />
     <ClInclude Include="Databases\DataDictionary.h" />
-    <ClInclude Include="Databases\DoubleFormula.hpp" />
     <ClInclude Include="Databases\ElementType.hpp" />
-    <ClInclude Include="Databases\ExprFormula.h" />
     <ClInclude Include="Databases\IndexedDictionary.h" />
     <ClInclude Include="Databases\IndexedIniData.h" />
     <ClInclude Include="Databases\IniDataV2.h" />
-    <ClInclude Include="Databases\IntFormula.hpp" />
-    <ClInclude Include="Databases\MediumDecFormula.hpp" />
     <ClInclude Include="Databases\OrderedIndexDictionary.h" />
-    <ClInclude Include="Databases\VariableFormula.hpp" />
+    <ClInclude Include="Formulas\BuiltinFormula.hpp" />
+    <ClInclude Include="Formulas\DoubleFormula.hpp" />
+    <ClInclude Include="Formulas\IntFormula.hpp" />
+    <ClInclude Include="Formulas\MediumDecFormula.hpp" />
+    <ClInclude Include="Formulas\VariableFormula.hpp" />
     <ClInclude Include="OtherFunctions\MiscFunctions.h" />
     <ClInclude Include="NodeTrees\LooseNodeTreeTemplate.h" />
     <ClInclude Include="NodeTrees\TagNodeTreeTemplate.h" />
