Auto enabled Blazaes_EnableCalculusExtras in library to make IntelliSense active for planned settings for code tests

--- a/GlobalCode/BlazesGlobalCode.vcxproj.filters
+++ b/GlobalCode/BlazesGlobalCode.vcxproj.filters
@@ -183,6 +183,9 @@
     <ClInclude Include="Formulas\ElementType.hpp">
       <Filter>Header Files\Formulas</Filter>
     </ClInclude>
+    <ClInclude Include="DLLAPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NodeTrees\TagNodeTreeTemplate.cpp">
