--- a/GlobalCode/BlazesGlobalCode.vcxproj
+++ b/GlobalCode/BlazesGlobalCode.vcxproj
@@ -118,7 +118,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;WIN32;_DEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;WIN32;_DEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(BoostDir);$(ParallelMap);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -137,7 +137,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;WIN32;NDEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;WIN32;NDEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <AdditionalIncludeDirectories>$(BoostDir);$(ParallelMap);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -158,7 +158,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;_DEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;_DEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(BoostDir);$(ParallelMap);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
@@ -177,7 +177,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;NDEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;NDEBUG;_LIB;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>$(BoostRoot);$(ParallelMap);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
@@ -195,7 +195,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;WIN32;_DEBUG;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;WIN32;_DEBUG;BLAZESGLOBALCODE_LIBRARY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
@@ -205,7 +205,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Release_DLL'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;WIN32;NDEBUG;%(PreprocessorDefinitions);BLAZESGLOBALCODE_LIBRARY</PreprocessorDefinitions>
+      <PreprocessorDefinitions>IndexedIniData_AddAltDecSupport;Blazes_EnableCalculusExtras;AltDec_EnableENum;WIN32;NDEBUG;%(PreprocessorDefinitions);BLAZESGLOBALCODE_LIBRARY</PreprocessorDefinitions>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
