some small additions and changes
-Added ArgList and ArgStringList etc from my other project for reuse
-renamed include to MediumDec.hpp for few files that were not updated to .h to .hpp change

--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,5 @@ GlobalCode/luple/
 !GlobalCode/luple/type-loophole.h
 CombinedBaseMultiview/
 GlobalCode/PagedMultiviewTreeControlOld/
+
+GlobalCode/TreeViewV2/
