Added TreeView files(that need to be modified for changes in project and structure) from other project
-Changed license of MFCApp project to default to MIT as well

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,7 @@ CombinedBaseMultiview/
 SharedCode/PagedMultiviewTreeControlOld/
 
 SharedCode/TreeViewV2/
+
+SharedCode/MFCApp/OldBhvTreeView.h
+
+SharedCode/MFCApp/OldBhvTreeView.cpp
