--- a/SharedCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
+++ b/SharedCode/PagedMultiviewTreeControl/MultiView.vcxproj.filters
@@ -134,7 +134,7 @@
     <ClInclude Include="$(BlazesSharedCode)\PagedMultiviewTreeControl\CustomTreeCtrl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(BlazesSharedCode)\PagedMultiviewTreeControl\TemplateMacros.h">
+    <ClInclude Include="$(BlazesSharedCode)\OtherFunctions\MFCMacros.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(BlazesSharedCode)\PagedMultiviewTreeControl\TreeCtrlPage.h">
